...
          // Les 4 Flèches Directionnelles
          _DirectionArrow(
            angle: 0,
            icon: Icons.keyboard_arrow_up,
            isHidden: isReverse(0),
            isDisabled: isEdge(0),
            semanticLabel: 'MOVE_UP_BTN',
            onTap: () => onMove(getMoveType(0)),
          ),
          _DirectionArrow(
            angle: 90,
            icon: Icons.keyboard_arrow_right,
            isHidden: isReverse(90),
...
